--- a/static/index.html
+++ b/static/index.html
@@ -5,10 +5,10 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input#m { border: 0; padding: 10px; width: 70%; margin-right: .5%; }
-      form input#n { border: 0; padding: 10px; width: 10%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+      form  { background: #FFF;  position: fixed; bottom: 0; width: 100%; height: 6% }
+      form input#m { padding-top:2px;border: 0;  width: 60%; height: 100% }
+      form input#n {padding-top:2px; border: 0;  width: 10%;   height: 100% }
+      form button { padding-top:2px;height: 100% ; width: 9.5%; background: rgb(130, 224, 255); border: none;  }
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
@@ -19,28 +19,38 @@
   </head>
   <body>
     <ul id="messages"></ul>
+      
     <form>
       <input id="m" autocomplete="off" /><button id="send">Send</button>
       <input id="n" autocomplete="off" /><button id="sign">Sign</button>
+      <button id="clear">  Clear  </button>
     </form>
     	<script>
     	  var username = null;
+        var socket = io();
+
 	 	   $('#sign').click(function(e){
 	 	  	e.preventDefault();
 	 	  	username = $("#n").val();
 		    socket.emit('user name', $('#n').val());
 	  	    $('#n').val('');
 	  	  });
-	  	  var socket = io();
+      /* $('#history').click(function(e){
+        e.preventDefault();
+        socket.emit('history');
+        });*/
 	 	   $('#send').click(function(e){
 	 	  	e.preventDefault();
-		    socket.emit('chat message', username,$('#m').val());
+		    socket.emit('chat message', $('#m').val());
 	  	    $('#m').val('');
-	  	   
 	  	  });
+       $('#clear').click(function(e){
+        e.preventDefault();
+        $('#messages').empty();
+       });
 	 	    socket.on('chat message',function(msg_name,msg){
 	  	  	$('#messages').append($('<li>').text(msg_name+':'+msg));
 	  	  });
-	</script>
+	   </script>
   </body>
 </html>
